# django-pl

./: Dockerfile  MANIFEST.in  Makefile  README.md  compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yaml  ecs_deploy.yml
aws/: booklist-ecs-task-def.json
booklist/: db.sqlite3  gunicorn.conf.py  pyproject.toml
booklist/app/: models.py  views.py
booklist/app/migrations/: 0001_initial.py  0002_readhistory_created_at_readhistory_updated_at.py
booklist/app/templates/app/: index.html
booklist/app/tests/: factories.py  test_views.py
booklist/booklist/: settings.py  urls.py
cloudformation/: iam.yaml  service.yaml
nginx/: Dockerfile
nginx/conf.d/: default.conf
