[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "booklist"
version = "1.0.0"
dependencies = [
    "Django>=4.2",
    "psycopg2>=2.9"
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "booklist.settings"

[tool.coverage.run]
omit = [
    "booklist/asgi.py",
    "booklist/wsgi.py",
    "manage.py",
    "**/migrations/*",
    "**/tests.py",
    "**/tests/*",
]

[tool.coverage.report]
show_missing = true